# RAGSDS

./: .env  .gitignore  README.md  hello.py  pyproject.toml
backend/: data_ingestion.py  llm.py  main.py  query.py  schemas.py  utils.py
frontend/: app.py
